fix blurriness

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,8 +33,8 @@ body {
 
 .header {
   background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
+  /* backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px); */
   color: #1e1e1e;
   padding: 0 1rem;
   height: 54px;
